--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,155 @@
-body{
-    background-color:burlywood ;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    /* font-family: Arial; */
+}
+
+body {
+    background-color: burlywood;
     height: 100vh;
     display: flex;
-    flex-direction:column ;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin:0;
+    margin: 0;
+    position: relative;
 }
-#container{
+
+h1{
+    font-size: 1.5rem;
+    padding:2px;
+    background-color: #cfa978;
+    color: #624621;
+    border: 1.5px solid #624621;
+    border-radius: 6px;
+}
+
+/* css code for divs */
+
+.canvas-container {
     background: #deb887;
-    height: 75vw;
-    aspect-ratio: 1/1;
+    width: 75vw;
+    aspect-ratio: 1 / 1;
+    flex-shrink: 0; 
+    max-width: 90vh;
+    max-height: 90vh;
+    margin: 5px;
     border-radius: 5px;
-    margin: 20px;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow:  27px 27px 45px #c6a478,
-             -27px -27px 45px #f6cc96;
+    box-shadow: 27px 27px 45px #c6a478, -27px -27px 45px #f6cc96;
+    z-index: 1;
 }
-#mycanvas{
-    border-radius: 4px;
-    /* border:2px solid black; */
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.info, .menu {
+    margin: 5px;
+    flex-shrink: 1;
+    height: 90vh;
+    width: 30vw;
+    z-index: 2;
+}
+
+/* .info {
+    background: aqua;
+} */
+
+.menu {
+    /* background: lightcoral; */
+    justify-content: flex-start;
+}
+
+
+
+/* css code for dropdown */
+.dropdown {
+    /* position: absolute; */
+    width: 45%;
+    min-width: 80px;/*increasing this anymore than 80 will make the website overflow*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: flex-start; */
+}
+.dropbtn {
+    background-color: #deb887;
+    color: #624621;
+    width: 100%;
+    min-width: 80px;/*increasing this anymore than 80 will make the website overflow*/
+    padding: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    border: 1.5px solid #624621;
+    border-radius: 6px;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    /* width: 100%; */
+    min-width: 80px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 3;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-bottom: 1px solid darkgray;
+}
+  
+.dropdown-content a:hover {
+    background-color: #cdcdcd;
+}
+  
+/* Show the dropdown menu when the dropdown is active */
+.dropdown.active .dropdown-content {
+    display: block;
+    margin-top: 32px;
+}
+  
+.dropdown:hover .dropbtn {
+    background-color: #c6a478;
+}
+
+
+@media (max-width: 700px) {
+    body {
+        flex-direction: column;
+        align-items: center;
+    }
+    .flex-container {
+        margin: 5px;
+        flex-direction: row;
+        align-items: center;
+        /* height: 70%; */
+    }
+    .info,.menu {
+        width: 95vw;
+        flex-shrink: 1;
+        min-height: 5vh;
+    }
+    .menu{
+        justify-content: center;        
+        align-items: flex-start;
+    }
+    .canvas-container {
+        flex-shrink: 0;
+        width: 75vh;
+        height: 75vh;
+        max-width: 95vw;
+        max-height: 95vw;
+    }
 }
